reflect-demo/src/tests/snapshots/reflect_demo__tests__generics__struct_with_circular_reference.snap
---
source: reflect-demo/src/tests/generics.rs
expression: "super::into_input_schema::<TestStructWithCircularReference>().input_types"
---
{
  "types": [
    {
      "kind": "struct",
      "name": "reflect::Empty",
      "description": "Struct object with no fields"
    },
    {
      "kind": "struct",
      "name": "reflect_demo::tests::generics::TestStructWithCircularReference",
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "std::boxed::Box",
            "parameters": [
              {
                "name": "reflect_demo::tests::generics::TestStructWithCircularReference"
              }
            ]
          },
          "required": true
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "std::boxed::Box",
      "description": "std::boxed::Box pointer type",
      "parameters": [
        {
          "name": "T"
        }
      ],
      "fallback": {
        "name": "T"
      }
    }
  ]
}
