reflect-demo/src/tests/snapshots/reflect_demo__tests__generics__struct_with_circular_reference_generic.snap
---
source: reflect-demo/src/tests/generics.rs
expression: "TestStructWithCircularReferenceGeneric::<u8>::reflect_input()"
---
[
  {
    "name": "reflect_demo::tests::generics::TestStructWithCircularReferenceGeneric",
    "parameters": [
      {
        "name": "u8"
      }
    ]
  },
  {
    "name": "",
    "types": [
      {
        "kind": "struct",
        "name": "reflect_demo::tests::generics::TestStructWithCircularReferenceGeneric",
        "parameters": [
          {
            "name": "T"
          }
        ],
        "fields": [
          {
            "name": "_f",
            "type": {
              "name": "std::boxed::Box",
              "parameters": [
                {
                  "name": "reflect_demo::tests::generics::TestStructWithCircularReferenceGeneric",
                  "parameters": [
                    {
                      "name": "T"
                    }
                  ]
                }
              ]
            }
          },
          {
            "name": "_f2",
            "type": {
              "name": "T"
            }
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::boxed::Box",
        "description": "std::boxed::Box pointer type",
        "parameters": [
          {
            "name": "T"
          }
        ],
        "fallback": {
          "name": "T"
        }
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
]
