reflect-demo/src/tests/snapshots/reflect_demo__tests__generics__struct_with_circular_reference_generic_parent-2.snap
---
source: reflect-demo/src/tests/generics.rs
expression: "super::into_input_typescript_code::<TestStructWithCircularReferenceGenericParent<u8>>()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflect-cli
//
// Schema name: 
// 




export namespace reflect {

/// Struct object with no fields
export interface Empty {
    }


/// Error object which is expected to be never returned
export interface Infallible {
    }

}

export namespace reflect_demo {

export namespace tests {

export namespace generics {

export interface TestStructWithCircularReferenceGeneric<T> {
    _f: reflect_demo.tests.generics.TestStructWithCircularReferenceGeneric<T>,
    _f2: T,
    }


export interface TestStructWithCircularReferenceGenericParent<T> {
    _f: reflect_demo.tests.generics.TestStructWithCircularReferenceGeneric<reflect_demo.tests.generics.TestStructWithCircularReferenceGenericParent<T>>,
    _f2: undefined | T /* phantom data */,
    }

}
}
}
