reflect-demo/src/tests/snapshots/reflect_demo__tests__generics__struct_with_circular_reference_generic_without_box-2.snap
---
source: reflect-demo/src/tests/generics.rs
expression: "super::into_input_typescript_code::<TestStructWithCircularReferenceGenericWithoutBox<TestStructWithCircularReferenceGenericWithoutBox<u8,\n        u16>,\n        TestStructWithCircularReferenceGenericWithoutBox<String, u32>>>()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflect-cli
//
// Schema name: 
// 




/// 16-bit unsigned integer
export type u16 = TODO;


/// 32-bit unsigned integer
export type u32 = TODO;


/// 8-bit unsigned integer
export type u8 = TODO;


export namespace reflect {

/// Struct object with no fields
export interface Empty {
    }


/// Error object which is expected to be never returned
export interface Infallible {
    }

}

export namespace reflect_demo {

export namespace tests {

export namespace generics {

export interface TestStructWithCircularReferenceGenericWithoutBox<A, B> {
    _f1: A;
    _f2: B;
    }

}
}
}

export namespace std {

/// UTF-8 encoded string
export type String = string;

}
