reflect-demo/src/tests/snapshots/reflect_demo__tests__generics__struct_with_circular_reference_generic_without_box_parent-2.snap
---
source: reflect-demo/src/tests/generics.rs
expression: "super::into_input_typescript_code::<TestStructWithCircularReferenceGenericWithoutBoxParent<TestStructWithCircularReferenceGenericWithoutBoxParent<u8,\n        u16>,\n        TestStructWithCircularReferenceGenericWithoutBoxParent<String,\n        u32>>>()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflect-cli
//
// Schema name: 
// 




export namespace reflect {

/// Struct object with no fields
export interface Empty {
    }


/// Error object which is expected to be never returned
export interface Infallible {
    }

}

export namespace reflect_demo {

export namespace tests {

export namespace generics {

export interface TestStructWithCircularReferenceGenericWithoutBox<A, B> {
    _f1: A;
    _f2: B;
    }


export interface TestStructWithCircularReferenceGenericWithoutBoxParent<C, D> {
    _f: reflect_demo.tests.generics.TestStructWithCircularReferenceGenericWithoutBox<D, C>;
    }

}
}
}
